# snek-ng

./: .gitignore  meson.build
src/: meson.build  snek-ng.cpp
subprojects/: cxxcurses.wrap
